add instagram link

--- a/index.html
+++ b/index.html
@@ -32,6 +32,14 @@
         background-repeat: no-repeat;
         background-color: #166534;          /* Dark green fallback */
     }
+      /* Instagram link hover effect */
+.ig-link:hover {
+    color: #22c55e !important;
+}
+.ig-link:hover .feather-instagram {
+    transform: scale(1.2);
+    transition: transform 0.2s ease;
+}
     .service-card:hover {
         transform: translateY(-10px);
         box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04);
@@ -92,6 +100,10 @@
                         <a href="services.html" class="text-gray-700 hover:text-green-600 px-3 py-2 rounded-md text-sm font-medium">Services</a>
                         <a href="gallery.html" class="text-gray-700 hover:text-green-600 px-3 py-2 rounded-md text-sm font-medium">Gallery</a>
                         <a href="index.html#sod-types" class="text-gray-700 hover:text-green-600 px-3 py-2 rounded-md text-sm font-medium">Sod Types</a>
+                        <a href="https://www.instagram.com/designer_landscapes_FL/" target="_blank" rel="noopener noreferrer" class="text-gray-700 hover:text-green-600 px-3 py-2 rounded-md text-sm font-medium flex items-center ig-link">
+    <i data-feather="instagram" class="h-5 w-5 mr-1"></i>
+    Instagram
+</a>
                         <a href="index.html#contact" class="bg-green-600 text-white px-4 py-2 rounded-md text-sm font-medium hover:bg-green-700 transition duration-300">Get a Quote</a>
                     </div>
                 </div>
@@ -107,6 +119,10 @@
                     <a href="services.html" class="text-gray-700 hover:text-green-600 block px-3 py-2 rounded-md text-base font-medium">Services</a>
                     <a href="gallery.html" class="text-gray-700 hover:text-green-600 block px-3 py-2 rounded-md text-base font-medium">Gallery</a>
                     <a href="index.html#sod-types" class="text-gray-700 hover:text-green-600 block px-3 py-2 rounded-md text-base font-medium">Sod Types</a>
+                    <a href="https://www.instagram.com/designer_landscapes_FL/" target="_blank" rel="noopener noreferrer" class="text-gray-700 hover:text-green-600 block px-3 py-2 rounded-md text-base font-medium flex items-center ig-link">
+    <i data-feather="instagram" class="h-6 w-6 mr-2"></i>
+    Instagram (@designer_landscapes_FL)
+</a>
                     <a href="index.html#contact" class="bg-green-600 text-white block px-4 py-2 rounded-md text-base font-medium hover:bg-green-700 transition duration-300">Get a Quote</a>
                 </div>
             </div>
@@ -486,6 +502,7 @@
     </script>
 </body>
 </html>
+
 
 
 
