added ig link to mobile

--- a/index.html
+++ b/index.html
@@ -137,6 +137,14 @@
                 <a href="index.html#contact" class="bg-green-600 hover:bg-green-700 text-white px-8 py-4 rounded-md text-lg font-medium transition duration-300">Request a Consultation</a>
                 <a href="services.html" class="bg-white hover:bg-gray-100 text-green-600 px-8 py-4 rounded-md text-lg font-medium transition duration-300">Our Services</a>
             </div>
+            <!-- Added Instagram button for mobile (visible only on small screens) -->
+<div class="mt-6 sm:hidden">
+    <a href="https://www.instagram.com/designer_landscapes_FL/" target="_blank" rel="noopener noreferrer"
+       class="inline-flex items-center justify-center bg-gradient-to-r from-purple-600 to-pink-500 hover:from-purple-700 hover:to-pink-600 text-white px-8 py-4 rounded-md text-lg font-medium transition duration-300 shadow-md w-full max-w-xs mx-auto">
+        <i data-feather="instagram" class="h-6 w-6 mr-3"></i>
+        Follow on Instagram
+    </a>
+</div>
         </div>
     </section>
     <!-- Services Section -->
@@ -502,6 +510,7 @@
     </script>
 </body>
 </html>
+
 
 
 
