updates sod types

--- a/index.html
+++ b/index.html
@@ -264,50 +264,50 @@
                 <p class="text-lg text-gray-600 max-w-3xl mx-auto">We work with high-quality, locally adapted sod types perfect for Northeast Florida climates.</p>
             </div>
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
-                <div class="bg-white p-8 rounded-lg shadow-md" data-aos="fade-up" data-aos-delay="100">
-                    <div class="flex items-center mb-4">
-                        <i data-feather="sun" class="grass-icon h-6 w-6 mr-2"></i>
-                        <h3 class="text-xl font-semibold">St. Augustine (Floratam)</h3>
-                    </div>
-                    <p class="text-gray-600">The most popular choice in Florida — thick, lush, and excellent shade tolerance.</p>
-                </div>
-                <div class="bg-white p-8 rounded-lg shadow-md" data-aos="fade-up" data-aos-delay="200">
-                    <div class="flex items-center mb-4">
-                        <i data-feather="sun" class="grass-icon h-6 w-6 mr-2"></i>
-                        <h3 class="text-xl font-semibold">Bermuda</h3>
-                    </div>
-                    <p class="text-gray-600">Durable, fast-growing, and ideal for high-traffic areas with full sun.</p>
-                </div>
-                <div class="bg-white p-8 rounded-lg shadow-md" data-aos="fade-up" data-aos-delay="300">
-                    <div class="flex items-center mb-4">
-                        <i data-feather="sun" class="grass-icon h-6 w-6 mr-2"></i>
-                        <h3 class="text-xl font-semibold">Zoysia</h3>
-                    </div>
-                    <p class="text-gray-600">Low-maintenance, dense turf with excellent drought and wear tolerance.</p>
-                </div>
-                <div class="bg-white p-8 rounded-lg shadow-md" data-aos="fade-up" data-aos-delay="100">
-                    <div class="flex items-center mb-4">
-                        <i data-feather="sun" class="grass-icon h-6 w-6 mr-2"></i>
-                        <h3 class="text-xl font-semibold">Bahiagrass</h3>
-                    </div>
-                    <p class="text-gray-600">Tough, low-maintenance grass perfect for large areas and sandy soils.</p>
-                </div>
-                <div class="bg-white p-8 rounded-lg shadow-md" data-aos="fade-up" data-aos-delay="200">
-                    <div class="flex items-center mb-4">
-                        <i data-feather="sun" class="grass-icon h-6 w-6 mr-2"></i>
-                        <h3 class="text-xl font-semibold">Empire Zoysia</h3>
-                    </div>
-                    <p class="text-gray-600">Soft texture, great shade tolerance, and minimal mowing required.</p>
-                </div>
-                <div class="bg-white p-8 rounded-lg shadow-md" data-aos="fade-up" data-aos-delay="300">
-                    <div class="flex items-center mb-4">
-                        <i data-feather="sun" class="grass-icon h-6 w-6 mr-2"></i>
-                        <h3 class="text-xl font-semibold">Palmetto St. Augustine</h3>
-                    </div>
-                    <p class="text-gray-600">Improved shade and disease resistance with a beautiful dark green color.</p>
-                </div>
-            </div>
+    <div class="bg-white p-8 rounded-lg shadow-md" data-aos="fade-up" data-aos-delay="100">
+        <div class="flex items-center mb-4">
+            <i data-feather="sun" class="grass-icon h-6 w-6 mr-2"></i>
+            <h3 class="text-xl font-semibold">St. Augustine Floratam</h3>
         </div>
+        <p class="text-gray-600">The most popular choice in Florida — thick, lush, and excellent shade tolerance.</p>
+    </div>
+    <div class="bg-white p-8 rounded-lg shadow-md" data-aos="fade-up" data-aos-delay="200">
+        <div class="flex items-center mb-4">
+            <i data-feather="sun" class="grass-icon h-6 w-6 mr-2"></i>
+            <h3 class="text-xl font-semibold">Bermuda</h3>
+        </div>
+        <p class="text-gray-600">Durable, fast-growing, and ideal for high-traffic areas with full sun.</p>
+    </div>
+    <div class="bg-white p-8 rounded-lg shadow-md" data-aos="fade-up" data-aos-delay="300">
+        <div class="flex items-center mb-4">
+            <i data-feather="sun" class="grass-icon h-6 w-6 mr-2"></i>
+            <h3 class="text-xl font-semibold">Zoysia</h3>
+        </div>
+        <p class="text-gray-600">Low-maintenance, dense turf with excellent drought and wear tolerance.</p>
+    </div>
+    <div class="bg-white p-8 rounded-lg shadow-md" data-aos="fade-up" data-aos-delay="100">
+        <div class="flex items-center mb-4">
+            <i data-feather="sun" class="grass-icon h-6 w-6 mr-2"></i>
+            <h3 class="text-xl font-semibold">Bahiagrass</h3>
+        </div>
+        <p class="text-gray-600">Tough, low-maintenance grass perfect for large areas and sandy soils.</p>
+    </div>
+    <!-- This is the replaced one -->
+    <div class="bg-white p-8 rounded-lg shadow-md" data-aos="fade-up" data-aos-delay="200">
+        <div class="flex items-center mb-4">
+            <i data-feather="sun" class="grass-icon h-6 w-6 mr-2"></i>
+            <h3 class="text-xl font-semibold">St. Augustine ProVista</h3>
+        </div>
+        <p class="text-gray-600">Glyphosate-tolerant hybrid with reduced mowing (up to 50% less), excellent shade tolerance, dense growth, and strong weed resistance — ideal for low-maintenance Florida lawns.</p>
+    </div>
+    <div class="bg-white p-8 rounded-lg shadow-md" data-aos="fade-up" data-aos-delay="300">
+        <div class="flex items-center mb-4">
+            <i data-feather="sun" class="grass-icon h-6 w-6 mr-2"></i>
+            <h3 class="text-xl font-semibold">Palmetto St. Augustine</h3>
+        </div>
+        <p class="text-gray-600">Improved shade and disease resistance with a beautiful dark green color.</p>
+    </div>
+</div>
     </section>
     <!-- CTA Section -->
     <section class="py-20 bg-green-700 text-white">
@@ -510,6 +510,7 @@
     </script>
 </body>
 </html>
+
 
 
 
