--- a/index.html
+++ b/index.html
@@ -168,19 +168,19 @@
                         <p class="text-gray-600">Expert installation of premium sod varieties for an instant, lush green lawn that’s ready to enjoy.</p>
                     </div>
                 </div>
-                <div class="service-card bg-white rounded-lg shadow-md overflow-hidden transition duration-300" data-aos="fade-up" data-aos-delay="200">
-                    <picture>
-                        <source srcset="https://res.cloudinary.com/dxghmamh0/image/upload/q_auto:good,f_auto,w_800/v1758906114/IMG_5125.heic_qmtjxr_dbv9tr.webp" type="image/webp">
-                        <img src="https://res.cloudinary.com/dxghmamh0/image/upload/q_auto:good,f_auto,w_800/v1758906114/IMG_5125.heic_qmtjxr_dbv9tr.jpg" alt="Commercial Lawn Project in Jacksonville, FL" class="w-full h-64 object-cover" loading="lazy">
-                    </picture>
-                    <div class="p-6">
-                        <div class="flex items-center mb-4">
-                            <i data-feather="home" class="grass-icon h-6 w-6 mr-2"></i>
-                            <h3 class="text-xl font-semibold">Commercial Landscaping</h3>
-                        </div>
-                        <p class="text-gray-600">Enhance your business property with professional sod and landscaping services for a polished, welcoming look.</p>
-                    </div>
-                </div>
+            <div class="service-card bg-white rounded-lg shadow-md overflow-hidden transition duration-300" data-aos="fade-up" data-aos-delay="200">
+    <picture>
+        <source srcset="https://res.cloudinary.com/dxghmamh0/image/upload/q_auto:good,f_auto,w_800/v1758906114/IMG_5125.heic_qmtjxr_dbv9tr.webp" type="image/webp">
+        <img src="https://res.cloudinary.com/dxghmamh0/image/upload/q_auto:good,f_auto,w_800/v1758906114/IMG_5125.heic_qmtjxr_dbv9tr.jpg" alt="Palm Tree Installation and Landscaping in Jacksonville, FL" class="w-full h-64 object-cover" loading="lazy">
+    </picture>
+    <div class="p-6">
+        <div class="flex items-center mb-4">
+            <i data-feather="sun" class="grass-icon h-6 w-6 mr-2"></i> <!-- Keeping sun icon; could change to 'tree-palm' if Feather has it, or keep for consistency -->
+            <h3 class="text-xl font-semibold">Palm Tree Installation</h3>
+        </div>
+        <p class="text-gray-600">Expert planting of cold-hardy, Florida-friendly palm varieties to create instant tropical elegance. We handle site prep, proper depth/placement, bracing, and integration with your new sod lawn for a stunning, low-maintenance look.</p>
+    </div>
+</div>
                 <div class="service-card bg-white rounded-lg shadow-md overflow-hidden transition duration-300" data-aos="fade-up" data-aos-delay="300">
                     <picture>
                         <source srcset="https://res.cloudinary.com/dxghmamh0/image/upload/q_auto:good,f_auto,w_800/v1758906111/IMG_4563.heic_mfrtze_mtgdtu.webp" type="image/webp">
@@ -542,6 +542,7 @@
     </script>
 </body>
 </html>
+
 
 
 
