Update print statement from 'Hello' to 'Goodbye'

--- a/services.html
+++ b/services.html
@@ -140,18 +140,18 @@
                     </div>
                 </div>
                 <div class="service-card bg-white rounded-lg shadow-md overflow-hidden transition duration-300" data-aos="fade-up" data-aos-delay="200">
-                    <picture>
-                        <source srcset="https://res.cloudinary.com/dxghmamh0/image/upload/q_auto,f_auto,w_800/v1758906114/IMG_5125.heic_qmtjxr_dbv9tr.webp" type="image/webp">
-                        <img src="https://res.cloudinary.com/dxghmamh0/image/upload/q_auto,f_auto,w_800/v1758906114/IMG_5125.heic_qmtjxr_dbv9tr.jpg" alt="Commercial Landscaping Project" class="w-full h-64 object-cover" loading="lazy">
-                    </picture>
-                    <div class="p-6">
-                        <div class="flex items-center mb-4">
-                            <i data-feather="home" class="grass-icon h-6 w-6 mr-2"></i>
-                            <h3 class="text-xl font-semibold">Commercial Landscaping</h3>
-                        </div>
-                        <p class="text-gray-600">Enhance your business property with professional landscaping, featuring lush sod lawns, clean designs, and low-maintenance solutions for maximum curb appeal.</p>
-                    </div>
-                </div>
+    <picture>
+        <source srcset="https://res.cloudinary.com/dxghmamh0/image/upload/q_auto,f_auto,w_800/v1758906114/IMG_5125.heic_qmtjxr_dbv9tr.webp" type="image/webp">
+        <img src="https://res.cloudinary.com/dxghmamh0/image/upload/q_auto,f_auto,w_800/v1758906114/IMG_5125.heic_qmtjxr_dbv9tr.jpg" alt="Palm Tree Installation in Jacksonville, FL" class="w-full h-64 object-cover" loading="lazy">
+    </picture>
+    <div class="p-6">
+        <div class="flex items-center mb-4">
+            <i data-feather="sun" class="grass-icon h-6 w-6 mr-2"></i>
+            <h3 class="text-xl font-semibold">Palm Tree Installation</h3>
+        </div>
+        <p class="text-gray-600">Add instant tropical flair with professional palm tree planting. We select and install hardy varieties suited to Northeast Florida, including proper rooting, stabilization, and seamless blending with sod and hardscapes.</p>
+    </div>
+</div>
                 <div class="service-card bg-white rounded-lg shadow-md overflow-hidden transition duration-300" data-aos="fade-up" data-aos-delay="300">
                     <picture>
                         <source srcset="https://res.cloudinary.com/dxghmamh0/image/upload/q_auto,f_auto,w_800/v1758906111/IMG_4563.heic_mfrtze_mtgdtu.webp" type="image/webp">
@@ -310,4 +310,5 @@
         });
     </script>
 </body>
+
 </html>
