update service list

--- a/services.html
+++ b/services.html
@@ -126,99 +126,97 @@
                 <p class="text-lg text-gray-600 max-w-3xl mx-auto">From instant lush green sod lawns to custom paver designs and full outdoor transformations, we deliver premium results tailored to your vision.</p>
             </div>
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
-                <div class="service-card bg-white rounded-lg shadow-md overflow-hidden transition duration-300" data-aos="fade-up" data-aos-delay="100">
-                    <picture>
-                        <source srcset="https://res.cloudinary.com/dxghmamh0/image/upload/q_auto,f_auto,w_800/v1758913267/IMG_8028_qiulty_e_improve_g4seuu.webp" type="image/webp">
-                        <img src="https://res.cloudinary.com/dxghmamh0/image/upload/q_auto,f_auto,w_800/v1758913267/IMG_8028_qiulty_e_improve_g4seuu.jpg" alt="Fresh Sod Installation in Jacksonville" class="w-full h-64 object-cover" loading="lazy">
-                    </picture>
-                    <div class="p-6">
-                        <div class="flex items-center mb-4">
-                            <i data-feather="sun" class="grass-icon h-6 w-6 mr-2"></i>
-                            <h3 class="text-xl font-semibold">Sod Installation</h3>
-                        </div>
-                        <p class="text-gray-600">Get an instant, vibrant green lawn with our professional sod installation using premium, locally adapted grass varieties for lasting beauty and durability.</p>
-                    </div>
-                </div>
-                <div class="service-card bg-white rounded-lg shadow-md overflow-hidden transition duration-300" data-aos="fade-up" data-aos-delay="200">
-    <picture>
-        <source srcset="https://res.cloudinary.com/dxghmamh0/image/upload/q_auto,f_auto,w_800/v1758906114/IMG_5125.heic_qmtjxr_dbv9tr.webp" type="image/webp">
-        <img src="https://res.cloudinary.com/dxghmamh0/image/upload/q_auto,f_auto,w_800/v1758906114/IMG_5125.heic_qmtjxr_dbv9tr.jpg" alt="Palm Tree Installation in Jacksonville, FL" class="w-full h-64 object-cover" loading="lazy">
-    </picture>
-    <div class="p-6">
-        <div class="flex items-center mb-4">
-            <i data-feather="sun" class="grass-icon h-6 w-6 mr-2"></i>
-            <h3 class="text-xl font-semibold">Palm Tree Installation</h3>
+               <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
+    <!-- 1. Sod Installation (unchanged) -->
+    <div class="service-card bg-white rounded-lg shadow-md overflow-hidden transition duration-300" data-aos="fade-up" data-aos-delay="100">
+        <picture>
+            <source srcset="https://res.cloudinary.com/dxghmamh0/image/upload/q_auto,f_auto,w_800/v1758913267/IMG_8028_qiulty_e_improve_g4seuu.webp" type="image/webp">
+            <img src="https://res.cloudinary.com/dxghmamh0/image/upload/q_auto,f_auto,w_800/v1758913267/IMG_8028_qiulty_e_improve_g4seuu.jpg" alt="Fresh Sod Installation in Jacksonville" class="w-full h-64 object-cover" loading="lazy">
+        </picture>
+        <div class="p-6">
+            <div class="flex items-center mb-4">
+                <i data-feather="sun" class="grass-icon h-6 w-6 mr-2"></i>
+                <h3 class="text-xl font-semibold">Sod Installation</h3>
+            </div>
+            <p class="text-gray-600">Get an instant, vibrant green lawn with our professional sod installation using premium, locally adapted grass varieties for lasting beauty and durability.</p>
         </div>
-        <p class="text-gray-600">Add instant tropical flair with professional palm tree planting. We select and install hardy varieties suited to Northeast Florida, including proper rooting, stabilization, and seamless blending with sod and hardscapes.</p>
+    </div>
+
+    <!-- 2. Palm Tree Installation (from previous change) -->
+    <div class="service-card bg-white rounded-lg shadow-md overflow-hidden transition duration-300" data-aos="fade-up" data-aos-delay="200">
+        <picture>
+            <source srcset="https://res.cloudinary.com/dxghmamh0/image/upload/q_auto,f_auto,w_800/v1758906114/IMG_5125.heic_qmtjxr_dbv9tr.webp" type="image/webp">
+            <img src="https://res.cloudinary.com/dxghmamh0/image/upload/q_auto,f_auto,w_800/v1758906114/IMG_5125.heic_qmtjxr_dbv9tr.jpg" alt="Palm Tree Installation in Jacksonville, FL" class="w-full h-64 object-cover" loading="lazy">
+        </picture>
+        <div class="p-6">
+            <div class="flex items-center mb-4">
+                <i data-feather="sun" class="grass-icon h-6 w-6 mr-2"></i>
+                <h3 class="text-xl font-semibold">Palm Tree Installation</h3>
+            </div>
+            <p class="text-gray-600">Expert planting of cold-hardy, Florida-friendly palm varieties to create instant tropical elegance. We handle site prep, proper depth/placement, bracing, and integration with your new sod lawn for a stunning, low-maintenance look.</p>
+        </div>
+    </div>
+
+    <!-- 3. Complete Landscaping (unchanged) -->
+    <div class="service-card bg-white rounded-lg shadow-md overflow-hidden transition duration-300" data-aos="fade-up" data-aos-delay="300">
+        <picture>
+            <source srcset="https://res.cloudinary.com/dxghmamh0/image/upload/q_auto,f_auto,w_800/v1758906111/IMG_4563.heic_mfrtze_mtgdtu.webp" type="image/webp">
+            <img src="https://res.cloudinary.com/dxghmamh0/image/upload/q_auto,f_auto,w_800/v1758906111/IMG_4563.heic_mfrtze_mtgdtu.jpg" alt="Complete Lawn Transformation" class="w-full h-64 object-cover" loading="lazy">
+        </picture>
+        <div class="p-6">
+            <div class="flex items-center mb-4">
+                <i data-feather="layers" class="grass-icon h-6 w-6 mr-2"></i>
+                <h3 class="text-xl font-semibold">Complete Landscaping</h3>
+            </div>
+            <p class="text-gray-600">Full-service outdoor transformations including sod, grading, irrigation, hedges, rock features, and hardscapes for a cohesive, stunning landscape.</p>
+        </div>
+    </div>
+
+    <!-- 4. Pressure Washing (new replacement for Rock Beds) -->
+    <div class="service-card bg-white rounded-lg shadow-md overflow-hidden transition duration-300" data-aos="fade-up" data-aos-delay="100">
+        <picture>
+            <source srcset="https://res.cloudinary.com/dxghmamh0/image/upload/q_auto,f_auto,w_800/v1758315432/IMG_3015.heic_b5fci7.webp" type="image/webp"> <!-- Keeping original rock bed image temporarily; consider updating later -->
+            <img src="https://res.cloudinary.com/dxghmamh0/image/upload/q_auto,f_auto,w_800/v1758315432/IMG_3015.heic_b5fci7.jpg" alt="Pressure Washing Driveway and Exterior in Jacksonville, FL" class="w-full h-64 object-cover" loading="lazy">
+        </picture>
+        <div class="p-6">
+            <div class="flex items-center mb-4">
+                <i data-feather="droplet" class="grass-icon h-6 w-6 mr-2"></i> <!-- 'droplet' for water/cleaning theme; or use 'spray-can' if available -->
+                <h3 class="text-xl font-semibold">Pressure Washing</h3>
+            </div>
+            <p class="text-gray-600">Revive your home's curb appeal with professional pressure washing for driveways, sidewalks, house exteriors, decks, and more. Safe, effective cleaning removes dirt, mold, and stains without damaging surfaces.</p>
+        </div>
+    </div>
+
+    <!-- 5. Irrigation Services (new replacement for Tree/Stump Removal) -->
+    <div class="service-card bg-white rounded-lg shadow-md overflow-hidden transition duration-300" data-aos="fade-up" data-aos-delay="200">
+        <picture>
+            <source srcset="https://res.cloudinary.com/dxghmamh0/image/upload/q_auto,f_auto,w_800/v1758315437/IMG_4774.heic_vutjsa.webp" type="image/webp"> <!-- Keeping original tree image temporarily; update if you have irrigation-specific photos -->
+            <img src="https://res.cloudinary.com/dxghmamh0/image/upload/q_auto,f_auto,w_800/v1758315437/IMG_4774.heic_vutjsa.jpg" alt="Irrigation System and Sprinkler Repair in Jacksonville, FL" class="w-full h-64 object-cover" loading="lazy">
+        </picture>
+        <div class="p-6">
+            <div class="flex items-center mb-4">
+                <i data-feather="droplet" class="grass-icon h-6 w-6 mr-2"></i>
+                <h3 class="text-xl font-semibold">Irrigation Services</h3>
+            </div>
+            <p class="text-gray-600">Full irrigation solutions including new system installation, sprinkler head repair/adjustment, line repair, valve troubleshooting, winterization, and ongoing maintenance to keep your sod lawn healthy and water-efficient.</p>
+        </div>
+    </div>
+
+    <!-- 6. Palm Trimming (new replacement for Paver Patios) -->
+    <div class="service-card bg-white rounded-lg shadow-md overflow-hidden transition duration-300" data-aos="fade-up" data-aos-delay="300">
+        <picture>
+            <source srcset="https://res.cloudinary.com/dxghmamh0/image/upload/q_auto,f_auto,w_800/v1758906108/IMG_3825.heic_prceeg_kcxvki.webp" type="image/webp"> <!-- Keeping original paver image temporarily -->
+            <img src="https://res.cloudinary.com/dxghmamh0/image/upload/q_auto,f_auto,w_800/v1758906108/IMG_3825.heic_prceeg_kcxvki.jpg" alt="Palm Tree Trimming in Jacksonville, FL" class="w-full h-64 object-cover" loading="lazy">
+        </picture>
+        <div class="p-6">
+            <div class="flex items-center mb-4">
+                <i data-feather="scissors" class="grass-icon h-6 w-6 mr-2"></i> <!-- 'scissors' for trimming; or 'tree-palm' if available -->
+                <h3 class="text-xl font-semibold">Palm Trimming</h3>
+            </div>
+            <p class="text-gray-600">Professional palm frond removal and shaping for safety, aesthetics, and hurricane prep. We trim dead/dangling fronds, skirt palms cleanly, and remove hazards without damaging the tree or your property.</p>
+        </div>
     </div>
 </div>
-                <div class="service-card bg-white rounded-lg shadow-md overflow-hidden transition duration-300" data-aos="fade-up" data-aos-delay="300">
-                    <picture>
-                        <source srcset="https://res.cloudinary.com/dxghmamh0/image/upload/q_auto,f_auto,w_800/v1758906111/IMG_4563.heic_mfrtze_mtgdtu.webp" type="image/webp">
-                        <img src="https://res.cloudinary.com/dxghmamh0/image/upload/q_auto,f_auto,w_800/v1758906111/IMG_4563.heic_mfrtze_mtgdtu.jpg" alt="Complete Lawn Transformation" class="w-full h-64 object-cover" loading="lazy">
-                    </picture>
-                    <div class="p-6">
-                        <div class="flex items-center mb-4">
-                            <i data-feather="layers" class="grass-icon h-6 w-6 mr-2"></i>
-                            <h3 class="text-xl font-semibold">Complete Landscaping</h3>
-                        </div>
-                        <p class="text-gray-600">Full-service outdoor transformations including sod, grading, irrigation, hedges, rock features, and hardscapes for a cohesive, stunning landscape.</p>
-                    </div>
-                </div>
-                <div class="service-card bg-white rounded-lg shadow-md overflow-hidden transition duration-300" data-aos="fade-up" data-aos-delay="100">
-                    <picture>
-                        <source srcset="https://res.cloudinary.com/dxghmamh0/image/upload/q_auto,f_auto,w_800/v1758315432/IMG_3015.heic_b5fci7.webp" type="image/webp">
-                        <img src="https://res.cloudinary.com/dxghmamh0/image/upload/q_auto,f_auto,w_800/v1758315432/IMG_3015.heic_b5fci7.jpg" alt="Rock Bed Landscaping" class="w-full h-64 object-cover" loading="lazy">
-                    </picture>
-                    <div class="p-6">
-                        <div class="flex items-center mb-4">
-                            <i data-feather="grid" class="grass-icon h-6 w-6 mr-2"></i>
-                            <h3 class="text-xl font-semibold">Rock Beds</h3>
-                        </div>
-                        <p class="text-gray-600">Low-maintenance, stylish rock beds designed to complement your new sod lawn and add texture and elegance to your outdoor space.</p>
-                    </div>
-                </div>
-                <div class="service-card bg-white rounded-lg shadow-md overflow-hidden transition duration-300" data-aos="fade-up" data-aos-delay="200">
-                    <picture>
-                        <source srcset="https://res.cloudinary.com/dxghmamh0/image/upload/q_auto,f_auto,w_800/v1758315437/IMG_4774.heic_vutjsa.webp" type="image/webp">
-                        <img src="https://res.cloudinary.com/dxghmamh0/image/upload/q_auto,f_auto,w_800/v1758315437/IMG_4774.heic_vutjsa.jpg" alt="Tree and Stump Removal" class="w-full h-64 object-cover" loading="lazy">
-                    </picture>
-                    <div class="p-6">
-                        <div class="flex items-center mb-4">
-                            <i data-feather="x-circle" class="grass-icon h-6 w-6 mr-2"></i>
-                            <h3 class="text-xl font-semibold">Tree/Stump Removal</h3>
-                        </div>
-                        <p class="text-gray-600">Safe, efficient removal of unwanted trees and stumps to clear the way for your new sod lawn and landscaping vision.</p>
-                    </div>
-                </div>
-                <div class="service-card bg-white rounded-lg shadow-md overflow-hidden transition duration-300" data-aos="fade-up" data-aos-delay="300">
-                    <picture>
-                        <source srcset="https://res.cloudinary.com/dxghmamh0/image/upload/q_auto,f_auto,w_800/v1758906108/IMG_3825.heic_prceeg_kcxvki.webp" type="image/webp">
-                        <img src="https://res.cloudinary.com/dxghmamh0/image/upload/q_auto,f_auto,w_800/v1758906108/IMG_3825.heic_prceeg_kcxvki.jpg" alt="Paver Patio Installation" class="w-full h-64 object-cover" loading="lazy">
-                    </picture>
-                    <div class="p-6">
-                        <div class="flex items-center mb-4">
-                            <i data-feather="square" class="grass-icon h-6 w-6 mr-2"></i>
-                            <h3 class="text-xl font-semibold">Paver Patios</h3>
-                        </div>
-                        <p class="text-gray-600">Create beautiful, durable outdoor living spaces with custom-designed paver patios that perfectly complement your lush green lawn.</p>
-                    </div>
-                </div>
-                <div class="service-card bg-white rounded-lg shadow-md overflow-hidden transition duration-300" data-aos="fade-up" data-aos-delay="100">
-                    <picture>
-                        <source srcset="https://res.cloudinary.com/dxghmamh0/image/upload/q_auto,f_auto,w_800/v1758315440/IMG_4903.heic_hcdcdc.webp" type="image/webp">
-                        <img src="https://res.cloudinary.com/dxghmamh0/image/upload/q_auto,f_auto,w_800/v1758315440/IMG_4903.heic_hcdcdc.jpg" alt="Paver Driveway Installation" class="w-full h-64 object-cover" loading="lazy">
-                    </picture>
-                    <div class="p-6">
-                        <div class="flex items-center mb-4">
-                            <i data-feather="truck" class="grass-icon h-6 w-6 mr-2"></i>
-                            <h3 class="text-xl font-semibold">Paver Driveways</h3>
-                        </div>
-                        <p class="text-gray-600">Upgrade your entrance with elegant, long-lasting paver driveways that enhance curb appeal and pair beautifully with a fresh sod lawn.</p>
-                    </div>
-                </div>
-            </div>
-        </div>
     </section>
 
     <!-- CTA Section -->
@@ -312,3 +310,4 @@
 </body>
 
 </html>
+
