--- a/services.html
+++ b/services.html
@@ -110,13 +110,13 @@
     </nav>
 
     <!-- Hero Section -->
-    <section class="hero-section h-96 flex items-center justify-center text-white pt-20">
-        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 text-center" data-aos="fade-up">
-            <h1 class="text-4xl md:text-5xl font-bold mb-6">Our Landscaping Services</h1>
-            <p class="text-xl md:text-2xl mb-8 max-w-3xl mx-auto">Transform your property with professional sod installation and expert landscaping solutions in Jacksonville, FL.</p>
-            <a href="index.html" class="bg-green-600 hover:bg-green-700 text-white px-8 py-4 rounded-md text-lg font-medium transition duration-300">Back to Home</a>
-        </div>
-    </section>
+   <section class="hero-section h-96 flex items-center justify-center text-white pt-20">
+    <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 text-center" data-aos="fade-up">
+        <h1 class="text-4xl md:text-5xl font-bold mb-6">Landscaping & Sod Services in St. Augustine & Jacksonville</h1>
+        <p class="text-xl md:text-2xl mb-8 max-w-3xl mx-auto">From instant sod lawns and palm installation to irrigation, pressure washing, and complete transformations — professional results you can trust.</p>
+        <a href="index.html" class="bg-green-600 hover:bg-green-700 text-white px-8 py-4 rounded-md text-lg font-medium transition duration-300">Back to Home</a>
+    </div>
+</section>
 
     <!-- Services Section -->
     <section id="services" class="py-20 bg-gray-50">
@@ -172,19 +172,19 @@
                 </div>
 
                 <!-- Pressure Washing -->
-                <div class="service-card bg-white rounded-lg shadow-md overflow-hidden transition duration-300" data-aos="fade-up" data-aos-delay="250">
-                    <picture>
-                        <source srcset="https://res.cloudinary.com/dxghmamh0/image/upload/e_improve/v1769239536/IMG_2918_w623pf.heic" type="image/webp">
-                        <img src="https://res.cloudinary.com/dxghmamh0/image/upload/q_auto,f_auto,w_800/v1758315432/IMG_3015.heic_b5fci7.jpg" alt="Pressure Washing Driveway and Exterior in Jacksonville, FL" class="w-full h-64 object-cover" loading="lazy">
-                    </picture>
-                    <div class="p-6">
-                        <div class="flex items-center mb-4">
-                            <i data-feather="droplet" class="grass-icon h-6 w-6 mr-2"></i>
-                            <h3 class="text-xl font-semibold">Pressure Washing</h3>
-                        </div>
-                        <p class="text-gray-600">Revive your home's curb appeal with professional pressure washing for driveways, sidewalks, house exteriors, decks, and more. Safe, effective cleaning removes dirt, mold, and stains.</p>
-                    </div>
-                </div>
+<div class="service-card bg-white rounded-lg shadow-md overflow-hidden transition duration-300" data-aos="fade-up" data-aos-delay="250">
+    <picture>
+        <source srcset="https://res.cloudinary.com/dxghmamh0/image/upload/q_auto,f_auto,w_800/e_improve/v1769239536/IMG_2918_w623pf.heic" type="image/webp">
+        <img src="https://res.cloudinary.com/dxghmamh0/image/upload/q_auto,f_auto,w_800/e_improve/v1769239536/IMG_2918_w623pf.heic" alt="Professional Pressure Washing in St. Augustine & Jacksonville, FL" class="w-full h-64 object-cover" loading="lazy">
+    </picture>
+    <div class="p-6">
+        <div class="flex items-center mb-4">
+            <i data-feather="droplet" class="grass-icon h-6 w-6 mr-2"></i>
+            <h3 class="text-xl font-semibold">Pressure Washing</h3>
+        </div>
+        <p class="text-gray-600">Revive curb appeal with professional pressure washing of driveways, sidewalks, house exteriors, fences, decks, and patios. Safe, powerful cleaning removes dirt, mold, algae, and stains.</p>
+    </div>
+</div>
 
                 <!-- Irrigation Services -->
                 <div class="service-card bg-white rounded-lg shadow-md overflow-hidden transition duration-300" data-aos="fade-up" data-aos-delay="300">
@@ -225,10 +225,9 @@
             <h2 class="text-3xl font-bold mb-6" data-aos="fade-up">Ready to Transform Your Property?</h2>
             <p class="text-xl mb-8 max-w-3xl mx-auto" data-aos="fade-up" data-aos-delay="100">Contact us today to discuss your sod or landscaping project and schedule a free consultation.</p>
             <div class="flex flex-col sm:flex-row justify-center gap-4" data-aos="fade-up" data-aos-delay="200">
-                <a href="index.html#contact" class="bg-white hover:bg-gray-100 text-green-700 px-8 py-4 rounded-md text-lg font-medium transition duration-300">Get a Free Quote</a>
-                <a href="tel:9042742101" class="border-2 border-white hover:bg-white hover:text-green-700 px-8 py-4 rounded-md text-lg font-medium transition duration-300">
-                    <i data-feather="phone" class="inline mr-2"></i> (904) 274-2101
-                </a>
+               <a href="tel:+19042742101" class="border-2 border-white hover:bg-white hover:text-green-700 px-8 py-4 rounded-md text-lg font-medium transition duration-300" aria-label="Call us at (904) 274-2101 for a free quote">
+    <i data-feather="phone" class="inline mr-2"></i> (904) 274-2101
+</a>
             </div>
         </div>
     </section>
@@ -310,4 +309,5 @@
     </script>
 </body>
 </html>
+
 
